examples/kubernetes-cassandra/starwars.yaml
apiVersion: v1
kind: Service
metadata:
  name: starwars
  labels:
    run: starwars
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 32000
    protocol: TCP
    name: http
  selector:
    run: starwars
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starwars
spec:
  selector:
    matchLabels:
      run: starwars
  replicas: 1
  template:
    metadata:
      labels:
        run: starwars
    spec:
      containers:
      - name: starwars
        image: docker.io/samircilium/starwars:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
